      o Note axsearch() is in the optextras package, but needs a good test.
        May want to include a maximization test too.
      o trig1507.R issue of bounds to avoid multiple minima, note ttrig8b lbfgsb3 etc.
      o grchk() -- can it be cleaned up -- it is in optextras
      o Put counters in efn, egr ??
      o Check all failures reported below are fixed!

VERSION 2017-11-28

VERSION 2017-09-24
      o comments include 2017-09-18 version
      o brought optimx solvers into optimr and added check that packages 
        are available
      o Fix for lbfgsb3 which was changed at same time to correct and
        simplify some control parameters

VERSION 2017-04-05
      o allowed hessian in opm() and optimr() (for nlm)

VERSION 2017-02-15
      o added subplex method

VERSION 2016-09-16
      o Harry Joe reported troubles with numerical gradient approximations. Found
        	some glitches and conflicts to fix. Also documentation is less than ideal.
        Scaling spar to par was INSIDE control$trace

VERSION 2016-08-16
      o checked and released on CRAN

VERSION 2016-07-10
      o hessian=TRUE is NOT properly executed
      o Test function hobbs15b illustrates different scalings across all methods
      o Appropriate lists of "ALL", "bounded" and "masked" methods are defined 
        in the ctrldefault() function.
      o jonesrun L-BFGS-B fails with numerical gradient approximation.
      o dfoptim hjkb was fixed by Ravi Varadhan

VERSION 2016-07-03
      o Move allmeth, bdmeth, maskmeth into ctrldefault so we have just in
	one place. Note that this will change with optimr/optimrx
      o Masks for hjn(), and incorporate hjn in optimr
      o time (xtimes) removed from optimr, but timing is included in opm()
      o polyalgorithm wrapper polyopt() included and documented with example
      o multistart wrapper multistart() included and documented with example
      o renamed coef.optimx to coef.opm

VERSION 2016-06-28